--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,7 @@
 }
 
 html {
+  color-scheme: dark;
   scroll-behavior: smooth;
   font-size: 16px;
   overflow-x: hidden;
